[project]
name = "hisdf"
version = "1.0.0"
description = "HISDF (Human Instance, Skeleton, and Depth Fusion) is a unified model that fuses human instance segmentation, skeletal structure estimation, and depth prediction to achieve holistic human perception from visual input."
readme = "README.md"
requires-python = "==3.10.17"
dependencies = [
    "onnx==1.19.0",
    "onnx-graphsurgeon==0.5.8",
    "onnxruntime-gpu==1.23.0",
    "onnxsim==0.4.30",
    "opencv-python==4.12.0.88",
    "pyyaml==6.0.3",
    "sio4onnx==1.0.3",
    "snc4onnx==1.0.14",
    "snd4onnx==1.1.7",
    "sne4onnx==1.0.14",
    "soa4onnx==1.0.5",
    "sor4onnx==1.0.7",
    "torch==2.8.0",
    "torchvision==0.23.0",
]
